# agents

./: Cargo.toml  Dockerfile  README.md  brainstorming.md  install.sh
.github/workflows/: pr-check.yaml  release.yaml
documentation/docs-website/: docusaurus.config.ts  package-lock.json  package.json
ops/: Dockerfile
src/: daemon.rs  db.rs  lib.rs  main.rs  server.rs
src/agent/: agent.rs  util.rs
src/resource/: docker.rs  mod.rs  vectordb.rs
src/server/: handler.rs  mod.rs  requests.rs  responses.rs  server.rs
src/server/templates/: layout.html
src/templates/: index.html  layout.html
